# soilDataSystem_transmitter

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md
api/commons/inc/: logger.h  shared_data.h
api/gnss/inc/: api_gnss.h
api/gnss/src/: api_gnss.c
api/tft_display/inc/: HT_st7735.h  HT_st7735_fonts.h
api/tft_display/src/: HT_st7735.c  HT_st7735_fonts.c
api/uart/inc/: api_uart.h
api/uart/src/: api_uart.c
app/inc/: app.h  crc_calculator.h  gnss_reader.h  soil_sensor_reader.h  tft_manager.h
app/src/: app.c  crc_calculator.c  gnss_reader.c  soil_sensor_reader.c  tft_manager.c
main/: CMakeLists.txt  main.c
peripherals/inc/: config.h  gnss_uart_handler.h  npk_uart_handler.h  tft_spi_handler.h  uart_handler.h
peripherals/src/: gnss_uart_handler.c  npk_uart_handler.c  tft_spi_handler.c
